# attentionatlas

./: .env.example  .gitignore  CONCURRENT_REQUESTS_PLAN.md  DYNAMIC_ACTOR_FRAMEWORK_DESIGN.md  HOW_TO_TEST.md  MULTI_REQUEST_IMPLEMENTATION_COMPLETE.md  MULTI_REQUEST_IMPLEMENTATION_PLAN.md  MULTI_REQUEST_IMPLEMENTATION_SUMMARY.md  MULTI_REQUEST_QUICK_START.md  PLUGIN_ARCHITECTURE_REVIEW.md  README.md  REQUEST_ID_FIX_SUMMARY.md  WIKI_OUTLINE.md  api_vllm.py  compare_attention.py  investigate_vllm_request_context.py  investigate_vllm_request_context_v1.py  pyproject.toml  test_multi_request_simple.py  test_multi_request_support.py  test_request_id.py  test_simple_diagnostic.py
docs/: reference_attention_implementation.md  vllm_model_compatibility.md
frontend/: index.html
frontend/css/: visualization.css
frontend/js/: app.js  config.js  visualization.js
vllm_attention_capture_plugin/: README.md  __init__.py  api.py
vllm_attention_capture_plugin/hooks/: __init__.py  attention_hook.py
vllm_attention_capture_plugin/wrappers/: __init__.py  attention_layer_patcher.py  kv_cache_block_table.py
