[project]
name = "attentionatlas"
version = "0.1.0"
description = "Attention Visualization Tool"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.135.3",
  "numpy>=2.2.6",
  "pypdf2>=3.0.1",
  "python-dotenv>=1.2.2",
  "torch>=2.0.0",
  "uvicorn>=0.44.0",
  "vllm>=0.5.0.post1",
  "transformers<5",
]

[tool.uv]
required-environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'darwin'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
